Aktualizacja „JiPP, Lab03”
 - wymuszenie kompilacji programu 32-bitowego dla projektów „Lab04” oraz „Lab03b”.
 - przepisanie definicji klasy `MyException` jako pochodną klasy `std::exception`.

--- a/03_semestr_zimowy_2020/Jezyki_i_Paradygmaty_Programowania/win32_cpp/lab03b/CMakeLists.txt
+++ b/03_semestr_zimowy_2020/Jezyki_i_Paradygmaty_Programowania/win32_cpp/lab03b/CMakeLists.txt
@@ -33,6 +33,15 @@ add_executable (
 )
 
 
+# Wymuszenie kompilacji programu 32-bitowego
+set_target_properties (
+
+    Lab03b PROPERTIES
+    COMPILE_FLAGS "-m32"
+    LINK_FLAGS "-m32"
+)
+
+
 # Biblioteki dynamiczne (".lib" -> ".dll")
 target_link_libraries (
 
