--- a/03_semestr_zimowy_2020/Jezyki_i_Paradygmaty_Programowania/win32_cpp/lab04/CMakeLists.txt
+++ b/03_semestr_zimowy_2020/Jezyki_i_Paradygmaty_Programowania/win32_cpp/lab04/CMakeLists.txt
@@ -38,3 +38,12 @@ add_executable (
     ./src/Lab04/MyException.cpp
     ./src/Lab04/Matrix.cpp
 )
+
+
+# Wymuszenie kompilacji programu 32-bitowego
+set_target_properties (
+
+    Lab04 PROPERTIES
+    COMPILE_FLAGS "-m32"
+    LINK_FLAGS "-m32"
+)
