--- a/03_semestr_zimowy_2020/Jezyki_i_Paradygmaty_Programowania/win32_cpp/lab08/CMakeLists.txt
+++ b/03_semestr_zimowy_2020/Jezyki_i_Paradygmaty_Programowania/win32_cpp/lab08/CMakeLists.txt
@@ -68,6 +68,6 @@ target_link_libraries (
 
     Lab08
 
-    ${CMAKE_CURRENT_SOURCE_DIR}/libs/GLFW/libglfw3.a
+    ${CMAKE_CURRENT_SOURCE_DIR}/libs/GLFW/libglfw3dll.a
     ${OPENGL_LIBRARIES}
 )
